# DiVA

./: .gitignore  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  tes.py
examples/: test_helper.py
fixtures/: mock_table.py
images/sample_dir_used_for_unit_testing/: used_for_unit_testing.py
research/: train_custom_resnet50.py
scripts/: activate.sh  clean_port.sh  run_container.sh  run_cronjob.sh  run_cronjob_image_tag.sh  run_cronjob_model_card.sh  run_server.sh  run_symlink.sh  run_task_monitoring.sh  run_test.sh  run_worker.sh  setup.sh
services/celery/: tasks.py  worker.py
services/postgres/: connection.py  models.py
src/: main.py  secret.py
src/routers/: health_check.py
src/routers/classification/: documentation.py  images.py  labels_distribution.py  labels_documentation.py  labels_validator.py  pagination.py
src/routers/enrich_knowledge/: train_model.py  train_models.py
src/routers/monitor_task/: monitor_task.py
src/routers/nas_directory_manager/: create_directory.py  delete_directory.py  move_directory.py  update_directory.py
src/routers/schema/: request_format.py  response.py
src/schema/: request_format.py  response.py
tests/api_test/classification/: test_label_distribution.py  test_label_docs.py  test_label_validator.py  test_pagination.py
tests/api_test/directory_management/: test_nas_create_dir.py  test_nas_delete_dir.py  test_nas_move_dir.py  test_nas_update_dir.py
tests/unit_test/: test_helper.py  test_helper_find_image_paths.py  test_query_general_find_record.py  test_query_general_insert_record.py  test_query_general_retrieve_all.py  test_query_general_update_record.py
utils/: custom_error.py  custom_errors.py  exception_handler.py  helper.py  logger.py  nas.py  resnet.py
utils/nas/: external.py  path_extractor.py  validator.py
utils/query/: general.py  image_tag.py  labels_distribution.py  labels_documentation.py  labels_validator.py  model_accuracy.py  model_card.py  pagination.py
utils/query/cronjob/: backup_image_tag.py  backup_model_card.py  general.py
utils/resnet/: custom_model.py  execute_model.py  test.py
