[tool.poetry]
name = "diva"
version = "0.1.0"
description = "DiVA stands for DFactory Image Retrieval, this repository demonstrates a Proof of Concept (PoC) for an advanced Image Search Engine tailored for private datasets. Designed to search and retrieve visually similar images, this project leverages state-of-the-art models to efficiently index and query images."
authors = ["bastian-arman <putra.armananta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.3.1"
ruff = "^0.8.6"
pre-commit = "^4.0.1"
synology-api = "^0.7.3"
httpx = "^0.28.1"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.36"
itsdangerous = "^2.2.0"
asyncpg = "^0.30.0"
celery = "^5.4.0"
flower = "^2.0.1"
pytest-asyncio = "^0.25.1"
pytest = "^8.3.4"
coverage = "^7.6.10"
matplotlib = "^3.10.0"
torchvision = "^0.20.1"
petname = "^2.6"
opencv-python = "^4.10.0.84"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.ruff]
exclude = ["tests"]
line-length = 130
